--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,7 @@
     <string name="menu_drawer_settings">SETTINGS</string>
     <string name="menu_drawer_real_estates">REAL ESTATES</string>
     <string name="menu_drawer_search">COMPLEX SEARCH</string>
+    <string name="menu_drawer_convert">CONVERT</string>
 
     <!-- nav_graph.xml -->
     <string name="navigation_list_name">Real estate list</string>
@@ -220,6 +221,7 @@
     <string name="hint_country">Country</string>
     <string name="hint_date">Effective date</string>
     <string name="hint_distance">Search radius (meter)</string>
+    <string name="hint_user">User</string>
     <string name="distance_poi">200</string>
     <string name="creator_enable">Is enable</string>
     <string name="creator_real_estate_lack_information">Lack of information</string>
@@ -254,6 +256,46 @@
     <string name="select_max_surface">Select max surface</string>
     <string name="select_min_room">Select min room</string>
     <string name="select_max_room">Select max room</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_username">Name</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="prompt_email">Email</string>
+
+
+    <string name="text_accounts">All Accounts</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="text_login">Login</string>
+    <string name="text_register">Register</string>
+    <string name="error_message_name">Enter Full Name</string>
+    <string name="error_message_email">Enter Valid Email</string>
+    <string name="error_message_age">Enter Age</string>
+    <string name="error_message_password">Enter Password</string>
+    <string name="success_message">Registration Successful</string>
+    <string name="text_not_member">No account yet? Create one</string>
+    <string name="text_already_member">Already a member? Login</string>
+    <string name="error_email_exists">Email Already Exists</string>
+    <string name="error_password_match">Password Does Not Matches</string>
+    <string name="error_valid_email_password">Wrong Email or Password</string>
+    <string name="action_settings">Settings</string>
+    <string name="text_hello">Hello,</string>
+    <string name="text_title">Android Tutorials Hub</string>
+    <string name="Insert_number">Insert Euro to convert</string>
+    <string name="dollar">Convert to Dollar</string>
+    <string name="euro">EURO</string>
+
+    <string name="title_convert_dialog_fragment">convert</string>
+    <string name="is_sold">is sold</string>
+    <string name="username">User</string>
+    <string name="hint_date_sold">Date of Sale</string>
 
 
 </resources>
